--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Internal Knowledge AI</title>
+
+  <!-- Prevent favicon error (cosmetic) -->
+  <link rel="icon" href="data:,">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,6 +24,7 @@
       padding: 10px 16px;
       font-size: 14px;
       cursor: pointer;
+      margin-left: 5px;
     }
     pre {
       background: #ffffff;
@@ -30,6 +35,7 @@
     }
   </style>
 </head>
+
 <body>
 
 <h3>Inside Sales Knowledge Assistant</h3>
@@ -46,8 +52,8 @@ import { pipeline } from "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17
 const SHEET_ID = "11271sFaBgw1Wwc9t4sif3NS0gfitqaPQWgO3tCcTY9M";
 const TAB_INDEX_NAME = "Tabs";
 const SIMILARITY_THRESHOLD = 0.28;
-const CACHE_KEY = "sheet_vectors_v1";
-// ==========================================
+const CACHE_KEY = "sheet_vectors_v2";
+// =========================================
 
 let docs = [];
 let vectors = [];
@@ -80,14 +86,16 @@ async function loadAllTabs() {
 }
 
 // ---------- Models ----------
+console.log("Loading embedding model...");
 const embedder = await pipeline(
   "feature-extraction",
   "Xenova/all-MiniLM-L6-v2"
 );
 
+console.log("Loading generation model...");
 const generator = await pipeline(
   "text-generation",
-  "Xenova/phi-2"
+  "Xenova/distilgpt2"
 );
 
 // ---------- Math ----------
@@ -116,8 +124,13 @@ async function indexDocs() {
 }
 
 // ---------- Init ----------
+console.log("Loading tabs...");
 await loadAllTabs();
+console.log("Rows loaded:", docs.length);
+
+console.log("Indexing docs...");
 await indexDocs();
+console.log("Indexing done");
 
 document.getElementById("a").innerText =
   "Knowledge base loaded. You can start asking questions.";
@@ -152,8 +165,7 @@ window.ask = async function () {
   const context = top.map(s => s.text).join("\n");
 
   const prompt = `
-You are a restricted internal assistant.
-You must answer ONLY from the context below.
+Answer ONLY using the context below.
 If the answer is not present, say:
 "I don't have that information."
 
@@ -165,7 +177,6 @@ ${q}
 `;
 
   const out = await generator(prompt, { max_new_tokens: 120 });
-
   const confidence = Math.round(scored[0].score * 100);
 
   document.getElementById("a").innerText =
