--- a/index.html
+++ b/index.html
@@ -5,31 +5,10 @@
   <link rel="icon" href="data:,">
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f7f7f7;
-    }
-    h3 {
-      margin-bottom: 10px;
-    }
-    input {
-      width: 70%;
-      padding: 10px;
-      font-size: 14px;
-    }
-    button {
-      padding: 10px 16px;
-      margin-left: 5px;
-      cursor: pointer;
-    }
-    pre {
-      background: #ffffff;
-      padding: 15px;
-      margin-top: 15px;
-      border-radius: 5px;
-      white-space: pre-wrap;
-    }
+    body { font-family: Arial; padding: 20px; background: #f7f7f7; }
+    input { width: 70%; padding: 10px; }
+    button { padding: 10px 16px; margin-left: 5px; }
+    pre { background: #fff; padding: 15px; margin-top: 15px; border-radius: 5px; white-space: pre-wrap; }
   </style>
 </head>
 
@@ -43,22 +22,22 @@
 <pre id="a">Loading knowledge base… please wait.</pre>
 
 <script type="module">
-import { pipeline, env } from "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.0";
+import { pipeline, env } from "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.16.1";
 
-/* ================= HARD ENV RESET ================= */
+/* ================= HARD RESET ================= */
 env.allowLocalModels = false;
 env.useBrowserCache = false;
 
-/* FORCE Hugging Face CDN — CRITICAL FIX */
+// 🔥 ABSOLUTE OVERRIDE (THIS IS THE KEY)
+env.localModelPath = null;
 env.remoteHost = "https://huggingface.co";
 env.remotePathTemplate = "{model}/resolve/main/";
-/* ================================================= */
+/* ============================================== */
 
 /* ================= CONFIG ================= */
 const SHEET_ID = "11271sFaBgw1Wwc9t4sif3NS0gfitqaPQWgO3tCcTY9M";
 const TAB_INDEX_NAME = "Tabs";
 const SIMILARITY_THRESHOLD = 0.28;
-const CACHE_KEY = "sheet_vectors_final_v1";
 /* ========================================= */
 
 let docs = [];
@@ -66,9 +45,7 @@ let vectors = [];
 
 /* ---------- Load tab names ---------- */
 async function loadTabNames() {
-  const res = await fetch(
-    `https://opensheet.elk.sh/${SHEET_ID}/${TAB_INDEX_NAME}`
-  );
+  const res = await fetch(`https://opensheet.elk.sh/${SHEET_ID}/${TAB_INDEX_NAME}`);
   const rows = await res.json();
   return rows.map(r => r.SheetName).filter(Boolean);
 }
@@ -79,26 +56,23 @@ async function loadAllTabs() {
   docs = [];
 
   for (const tab of tabs) {
-    const res = await fetch(
-      `https://opensheet.elk.sh/${SHEET_ID}/${encodeURIComponent(tab)}`
-    );
+    const res = await fetch(`https://opensheet.elk.sh/${SHEET_ID}/${encodeURIComponent(tab)}`);
     const rows = await res.json();
 
     rows.forEach((row, i) => {
-      const text = Object.values(row).join(" : ");
-      docs.push(`[${tab} | Row ${i + 2}] ${text}`);
+      docs.push(`[${tab} | Row ${i + 2}] ${Object.values(row).join(" : ")}`);
     });
   }
 }
 
-/* ---------- Load models ---------- */
-console.log("Loading embedding model...");
+/* ---------- MODELS ---------- */
+console.log("Loading embedding model (HF CDN)...");
 const embedder = await pipeline(
   "feature-extraction",
   "Xenova/all-MiniLM-L6-v2"
 );
 
-console.log("Loading generation model...");
+console.log("Loading generation model (HF CDN)...");
 const generator = await pipeline(
   "text-generation",
   "Xenova/distilgpt2"
@@ -106,24 +80,14 @@ const generator = await pipeline(
 
 /* ---------- Cosine similarity ---------- */
 function cosine(a, b) {
-  return a.reduce((sum, v, i) => sum + v * b[i], 0);
+  return a.reduce((s, v, i) => s + v * b[i], 0);
 }
 
-/* ---------- Index docs ---------- */
+/* ---------- Index ---------- */
 async function indexDocs() {
-  const cached = localStorage.getItem(CACHE_KEY);
-  if (cached) {
-    const parsed = JSON.parse(cached);
-    docs = parsed.docs;
-    vectors = parsed.vectors;
-    return;
-  }
-
   vectors = await Promise.all(
     docs.map(d => embedder(d, { pooling: "mean", normalize: true }))
   );
-
-  localStorage.setItem(CACHE_KEY, JSON.stringify({ docs, vectors }));
 }
 
 /* ---------- INIT ---------- */
@@ -146,8 +110,7 @@ window.ask = async function () {
   })).sort((a, b) => b.score - a.score);
 
   if (!scored.length || scored[0].score < SIMILARITY_THRESHOLD) {
-    document.getElementById("a").innerText =
-      "I don't have that information.";
+    document.getElementById("a").innerText = "I don't have that information.";
     return;
   }
 
@@ -167,12 +130,7 @@ ${q}
 `;
 
   const out = await generator(prompt, { max_new_tokens: 100 });
-  const confidence = Math.round(scored[0].score * 100);
-
-  document.getElementById("a").innerText =
-    out[0].generated_text +
-    `\n\nConfidence: ${confidence}%\n\nSource:\n` +
-    top.map(s => s.text.split("]")[0] + "]").join("\n");
+  document.getElementById("a").innerText = out[0].generated_text;
 };
 </script>
 
