--- a/index.html
+++ b/index.html
@@ -1,181 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Inside Sales Knowledge Assistant</title>
+  <title>Inside Sales Knowledge Assistant (AI)</title>
   <link rel="icon" href="data:,">
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f7f7f7;
-    }
-    h3 { margin-bottom: 10px; }
-    input {
-      width: 70%;
-      padding: 10px;
-      font-size: 14px;
-    }
-    button {
-      padding: 10px 16px;
-      margin-left: 5px;
-      cursor: pointer;
-    }
-    button:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-    pre {
-      background: #ffffff;
-      padding: 15px;
-      margin-top: 15px;
-      border-radius: 5px;
-      white-space: pre-wrap;
-    }
+    body { font-family: Arial; padding: 20px; background: #f7f7f7; }
+    input { width: 70%; padding: 10px; }
+    button { padding: 10px 16px; margin-left: 5px; }
+    pre { background: #fff; padding: 15px; margin-top: 15px; border-radius: 5px; white-space: pre-wrap; }
   </style>
 </head>
 
 <body>
 
-<h3>Inside Sales Knowledge Assistant</h3>
+<h3>Inside Sales Knowledge Assistant (Gemini)</h3>
 
-<input id="q" placeholder="Ask from SOP / Package / Policy…" />
-<button id="askBtn" disabled>Ask</button>
+<input id="q" placeholder="Ask anything about packages / SOP / policy…" />
+<button onclick="ask()">Ask</button>
 
-<pre id="a">Loading knowledge base… please wait.</pre>
+<pre id="a">Ready.</pre>
 
-<script type="module">
-/* ======================================================
-   CONFIG
-====================================================== */
+<script>
+const API_KEY = "AIzaSyDASIlc-6KDR5dniCMPh_WLMFYM8tm_oOk";
 const SHEET_ID = "11271sFaBgw1Wwc9t4sif3NS0gfitqaPQWgO3tCcTY9M";
 const TAB_INDEX_NAME = "Tabs";
-const SIMILARITY_THRESHOLD = 0.15;
 
-/* ======================================================
-   GLOBAL STORE
-====================================================== */
-let docs = [];
-
-/* ======================================================
-   LOAD TAB NAMES (SAFE)
-====================================================== */
-async function loadTabNames() {
-  const res = await fetch(
+async function loadAllSheetText() {
+  const tabsRes = await fetch(
     `https://opensheet.elk.sh/${SHEET_ID}/${TAB_INDEX_NAME}`
   );
-  const rows = await res.json();
+  const tabs = await tabsRes.json();
 
-  return rows
-    .map(r => typeof r.SheetName === "string" ? r.SheetName.trim() : "")
-    .filter(Boolean);
-}
+  let text = "";
 
-/* ======================================================
-   LOAD ALL TABS (BULLETPROOF)
-====================================================== */
-async function loadAllTabs() {
-  const tabs = await loadTabNames();
-  docs = [];
+  for (const t of tabs) {
+    const name = t.SheetName?.trim();
+    if (!name) continue;
 
-  for (const tab of tabs) {
-    const cleanTab = tab.trim();
-    const url = `https://opensheet.elk.sh/${SHEET_ID}/${encodeURIComponent(cleanTab)}`;
+    const res = await fetch(
+      `https://opensheet.elk.sh/${SHEET_ID}/${encodeURIComponent(name)}`
+    );
+    const rows = await res.json();
+    if (!Array.isArray(rows)) continue;
 
-    let rows;
-    try {
-      const res = await fetch(url);
-      rows = await res.json();
-    } catch {
-      console.warn("Skipping tab (fetch failed):", cleanTab);
-      continue;
-    }
-
-    if (!Array.isArray(rows)) {
-      console.warn("Skipping tab (invalid JSON):", cleanTab);
-      continue;
-    }
-
-    rows.forEach((row, i) => {
-      const text = Object.values(row)
-        .join(" ")
-        .replace(/\s+/g, " ")
-        .trim();
-
-      if (text.length > 0) {
-        docs.push({
-          source: `[${cleanTab} | Row ${i + 2}]`,
-          text
-        });
-      }
+    rows.forEach(r => {
+      text += Object.values(r).join(" ") + "\n";
     });
   }
+
+  return text;
 }
 
-/* ======================================================
-   SIMPLE TOKEN MATCH SCORING (STABLE)
-====================================================== */
-function tokenize(str) {
-  return str.toLowerCase().split(/\W+/).filter(Boolean);
-}
-
-function score(query, docText) {
-  const qTokens = tokenize(query);
-  const dTokens = tokenize(docText);
-
-  let hits = 0;
-  qTokens.forEach(t => {
-    if (dTokens.includes(t)) hits++;
-  });
-
-  return hits / Math.sqrt(dTokens.length + 1);
-}
-
-/* ======================================================
-   INIT
-====================================================== */
-await loadAllTabs();
-
-document.getElementById("a").innerText =
-  "Knowledge base loaded. You can start asking questions.";
-
-const askBtn = document.getElementById("askBtn");
-askBtn.disabled = false;
-
-/* ======================================================
-   ASK HANDLER — FINAL, CLEAN OUTPUT
-====================================================== */
-askBtn.addEventListener("click", () => {
+async function ask() {
   const q = document.getElementById("q").value.trim();
   if (!q) return;
 
-  const ranked = docs
-    .map(d => ({
-      ...d,
-      score: score(q, d.text)
-    }))
-    .sort((a, b) => b.score - a.score);
+  document.getElementById("a").innerText = "Thinking…";
 
-  if (!ranked.length || ranked[0].score < SIMILARITY_THRESHOLD) {
-    document.getElementById("a").innerText =
-      "I don't have that information.";
-    return;
-  }
+  const sheetData = await loadAllSheetText();
 
-  // 🔒 Clean answer: ONLY sheet content, no AI hallucination
-  const answer = ranked
-    .slice(0, 3)
-    .map(r => `• ${r.text}`)
-    .join("\n\n");
+  const prompt = `
+You are an internal knowledge assistant.
 
-  const sources = ranked
-    .slice(0, 3)
-    .map(r => r.source)
-    .join("\n");
+RULES:
+- Answer ONLY using the provided data
+- If the answer is not present, say exactly:
+"I don't have that information."
+- Do NOT guess or add external knowledge
 
-  document.getElementById("a").innerText =
-    answer + "\n\nSource:\n" + sources;
-});
+DATA:
+${sheetData}
+
+QUESTION:
+${q}
+`;
+
+  const res = await fetch(
+    "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + API_KEY,
+    {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        contents: [{ parts: [{ text: prompt }] }]
+      })
+    }
+  );
+
+  const json = await res.json();
+  const answer =
+    json.candidates?.[0]?.content?.parts?.[0]?.text ??
+    "I don't have that information.";
+
+  document.getElementById("a").innerText = answer;
+}
 </script>
 
 </body>
